--- a/content/blog/2023-03-07-testing.md
+++ b/content/blog/2023-03-07-testing.md
@@ -3,11 +3,14 @@ layout: blog
 title: Testing
 date: 2023-03-07T04:03:38.966Z
 thumbnail: /img/truenas-logon-header.png
+img: ./i-rest.jpg # Add image post (optional)
+tags: [Holidays, Hawaii]
+---
 tags:
   - Azure
 ---
-T﻿esting CMS
+Testing CMS
 
-`﻿````
-c﻿ode
-`﻿````
+`````
+code
+`````
