--- a/content/blog/2023-03-07-testing.md
+++ b/content/blog/2023-03-07-testing.md
@@ -3,7 +3,8 @@ layout: blog
 title: Testing
 date: 2023-03-07T04:03:38.966Z
 thumbnail: /img/truenas-logon-header.png
-img: ./i-rest.jpg # Add image post (optional)
+#img: ./i-rest.jpg # Add image post (optional)
+img: /img/truenas-logon-header.png
 tags:
   - Azure
 ---
